// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyListView renders with custom renderRow 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text>
      "Overridden!"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`EmptyListView renders with custom text 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      style={
        Object {
          "padding": 8,
          "textAlign": "center",
        }
      }
    >
      Nothing. Nothing at all.
    </Text>
  </View>
</RCTScrollView>
`;

exports[`EmptyListView renders with default text 1`] = `
<RCTScrollView
  DEPRECATED_sendUpdatedChildFrames={true}
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  enableEmptySections={true}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      style={
        Object {
          "padding": 8,
          "textAlign": "center",
        }
      }
    >
      No data.
    </Text>
  </View>
</RCTScrollView>
`;
